create winning team section

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <section class="mx-5">
             <div class="container mx-auto">
                 <div class="flex justify-between flex-col lg:flex-row">
-                    <div class="lg:py-44 py-24">
+                    <div class=" lg:py-44 py-24">
                         <h1 class="text-5xl lg:text-7xl font-bold text-center lg:text-start text-white">Conmebol <br>
                             Copa America <br>
                             2021</h1>
@@ -110,7 +110,7 @@
                             <img class="w-5" src="images/Social Icons/login.png" alt="">
                         </div>
                     </div>
-                    <div>
+                    <div class=" transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
                         <img src="images/banner.png" class="lg:max-w-3xl lg:mt-16" />
                     </div>
                 </div>
@@ -286,6 +286,66 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- winner team section -->
+        <section class="mx-5">
+            <div class="container mx-auto mb-28">
+                <div class="text-white flex-1 flex flex-col my-16">
+                    <h2 class="text-5xl font-bold my-8 text-center">2021 Winner team Argentina</h2>
+                    <p class="text-center">Argentina won the match 1–0 to clinch their fifteenth Copa América title and
+                        first since 1993, giving captain Lionel
+                        Messi <br> his first senior international trophy sixteen years into his career and ending a
+                        28-year
+                        trophy drought..</p>
+                </div>
+
+
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
+                    <!-- image-1 -->
+                    <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
+                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                    </div>
+
+                    <!-- image-2 -->
+                    <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
+                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                    </div>
+
+                    <!-- image-3 -->
+                    <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
+                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                    </div>
+
+                    <!-- image-4 -->
+                    <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
+                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                    </div>
+
+                    <!-- image-5 -->
+                    <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
+                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                    </div>
+
+                    <!-- image-6 -->
+                    <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
+                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                    </div>
+
+                    <!-- image-7 -->
+                    <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
+                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                    </div>
+
+                    <!-- image-8 -->
+                    <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
+                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
 
         <!-- Top Matches Highlights -->
         <section class="mx-5">
