--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <li><a>Contact</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end mx-5">
-                    <div class="btn flex bg-body-color border-0">
+                <div class="navbar-end lg:mx-5">
+                    <div class="btn flex bg-body-color border-0 w-28">
                         <img class="w-5" src="images/Social Icons/login.png" alt="">
                         <p class="text-white font-bold bg-">Login</p>
                     </div>
@@ -105,9 +105,11 @@
                             excepturi
                             exercitationem
                             quasi. In deleniti eaque <br> aut repudiandae et a id nisi.</p>
-                        <div class="btn bg-btn-color border-0 flex w-full lg:w-44 justify-center">
-                            <p class="text-white font-bold">Watch Live</p>
-                            <img class="w-5" src="images/Social Icons/login.png" alt="">
+                        <div class="flex justify-center">
+                            <div class="btn bg-btn-color border-0 w-44">
+                                <p class="text-white font-bold">Watch Live</p>
+                                <img class="w-5" src="images/Social Icons/login.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class=" transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
@@ -274,9 +276,12 @@
                                 consequat
                                 duis enim velit
                                 mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                            <div class="btn bg-btn-color border-0 my-10 lg:w-44 w-full">
-                                <p class="text-white font-bold bg-">Watch Now</p>
-                                <img class="w-5" src="images/Social Icons/login.png" alt="">
+
+                            <div class="flex justify-center">
+                                <div class="btn bg-btn-color border-0 my-10 w-44">
+                                    <p class="text-white font-bold">Watch Now</p>
+                                    <img class="w-5" src="images/Social Icons/login.png" alt="">
+                                </div>
                             </div>
                         </div>
                         <div class="flex-1">
@@ -304,42 +309,42 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
                     <!-- image-1 -->
                     <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
-                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                        <figure><img class="w-full rounded-2xl" src="images/players/player-1.png" alt="" /></figure>
                     </div>
 
                     <!-- image-2 -->
                     <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
-                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                        <figure><img class="w-full rounded-2xl" src="images/players/player-2.png" alt="" /></figure>
                     </div>
 
                     <!-- image-3 -->
                     <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
-                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                        <figure><img class="w-full rounded-2xl" src="images/players/player-3.png" alt="" /></figure>
                     </div>
 
                     <!-- image-4 -->
                     <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
-                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                        <figure><img class="w-full rounded-2xl" src="images/players/player-4.png" alt="" /></figure>
                     </div>
 
                     <!-- image-5 -->
                     <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
-                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                        <figure><img class="w-full rounded-2xl" src="images/players/player-5.png" alt="" /></figure>
                     </div>
 
                     <!-- image-6 -->
                     <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
-                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                        <figure><img class="w-full rounded-2xl" src="images/players/player-6.png" alt="" /></figure>
                     </div>
 
                     <!-- image-7 -->
                     <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
-                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                        <figure><img class="w-full rounded-2xl" src="images/players/player-7.png" alt="" /></figure>
                     </div>
 
                     <!-- image-8 -->
                     <div class="shadow-xl transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110">
-                        <figure><img class="w-full rounded-2xl" src="images/gallery/photo-1.jpg" alt="Shoes" /></figure>
+                        <figure><img class="w-full rounded-2xl" src="images/players/player-8.png" alt="" /></figure>
                     </div>
                 </div>
 
@@ -473,7 +478,6 @@
                     </div>
                 </div>
                 <ul class="flex justify-center gap-10">
-                    <li><img class="w-16" src="images/Social Icons/Dribbble.png" alt=""></li>
                     <li><img class="w-16" src="images/Social Icons/Instagram.png" alt=""></li>
                     <li><img class="w-16" src="images/Social Icons/Twitter.png" alt=""></li>
                     <li><img class="w-16" src="images/Social Icons/Youtube.png" alt=""></li>
