--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             excepturi
                             exercitationem
                             quasi. In deleniti eaque <br> aut repudiandae et a id nisi.</p>
-                        <div class="flex justify-center">
+                        <div class="flex justify-center lg:justify-start">
                             <div class="btn bg-btn-color border-0 w-44">
                                 <p class="text-white font-bold">Watch Live</p>
                                 <img class="w-5" src="images/Social Icons/login.png" alt="">
@@ -277,7 +277,7 @@
                                 duis enim velit
                                 mollit. Exercitation veniam consequat sunt nostrud amet.</p>
 
-                            <div class="flex justify-center">
+                            <div class="flex justify-center lg:justify-start">
                                 <div class="btn bg-btn-color border-0 my-10 w-44">
                                     <p class="text-white font-bold">Watch Now</p>
                                     <img class="w-5" src="images/Social Icons/login.png" alt="">
