--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <header>
         <!-- nav section -->
         <nav class="mx-5">
-            <div class="navbar bg-white container mx-auto rounded-3xl shadow-2xl">
-                <div class="navbar-start">
+            <div class="navbar bg-white container mx-auto rounded-3xl shadow-2xl flex justify-between">
+                <div>
                     <div class="dropdown">
                         <label tabindex="0" class="btn btn-ghost lg:hidden">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -68,11 +68,18 @@
                             <li><a>World Cup 2023</a></li>
                             <li><a>Upcoming Matches</a></li>
                             <li><a>Contact</a></li>
+                            <li>
+                                <div class="btn flex bg-body-color border-0 w-28">
+                                    <img class="w-5" src="images/Social Icons/login.png" alt="">
+                                    <p class="text-white font-bold bg-">Login</p>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     <a class="btn btn-ghost normal-case text-xl"><img class="w-36" src="images/Logo.png" alt=""></a>
                 </div>
-                <div class="navbar-center hidden lg:flex">
+
+                <div class="hidden lg:flex">
                     <ul class="menu menu-horizontal px-1 font-bold">
                         <li><a>Home</a></li>
                         <li><a>Clubs</a></li>
@@ -81,7 +88,8 @@
                         <li><a>Contact</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end lg:mx-5">
+
+                <div class="lg:mx-5 hidden lg:block">
                     <div class="btn flex bg-body-color border-0 w-28">
                         <img class="w-5" src="images/Social Icons/login.png" alt="">
                         <p class="text-white font-bold bg-">Login</p>
